--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -19,9 +19,7 @@
 				"type": "OData",
 				"settings": {
 					"localUri": "localService/metadata.xml",
-					"annotations": [
-						"annotation0"
-					]
+					"annotations": ["annotation0"]
 				}
 			},
 			"annotation0": {
@@ -92,11 +90,9 @@
 			}
 		},
 		"resources": {
-			"css": [
-				{
-					"uri": "css/style.css"
-				}
-			]
+			"css": [{
+				"uri": "css/style.css"
+			}]
 		},
 		"routing": {
 			"config": {
@@ -108,15 +104,17 @@
 				"controlId": "app",
 				"clearControlAggregation": false
 			},
-			"routes": [
-				{
-					"name": "YFI03",
-					"pattern": "",
-					"target": [
-						"YFI03"
-					]
-				}
-			],
+			"routes": [{
+				"name": "YFI03",
+				"pattern": "",
+				"target": ["YFI03"]
+			}, {
+				"name": "paymentDetail",
+				"pattern": "/paymentDetail/{id}",
+				"titleTarget": "",
+				"greedy": false,
+				"target": ["paymentDetail"]
+			}],
 			"targets": {
 				"TargetApp": {
 					"viewType": "XML",
@@ -128,6 +126,10 @@
 				"YFI03": {
 					"viewType": "XML",
 					"viewName": "YFI03"
+				},
+				"paymentDetail": {
+					"viewType": "XML",
+					"viewName": "paymentDetail"
 				}
 			}
 		}
